Initial Commit for the cvs Project

--- a/SOATutorialsWin11/pom.xml
+++ b/SOATutorialsWin11/pom.xml
@@ -8,5 +8,6 @@
     <modules>
         <!-- Add project modules -->
     	<module>HelloWorldWin11</module>
+    	<module>CardValidationSystem</module>
     </modules>
 </project>
