--- a/SOATutorialsWin11/CardValidationSystem/pom.xml
+++ b/SOATutorialsWin11/CardValidationSystem/pom.xml
@@ -8,7 +8,7 @@
         -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>SOATutorialsWin11</groupId>
-    <artifactId>HelloWorldWin11</artifactId>
+    <artifactId>CardValidationSystem</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>sar</packaging>
     
