Added deploy/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ deploy/
 
 CardValidationSystem/deploy/
 
+SOATutorialsWin11/CardValidationSystem/deploy/
+
 CardValidationSystem/SOA/SCA-INF/
 
 SOATutorialsWin11/CardValidationSystem/SOA/SCA-INF/
