Added ops SCA-INF to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ SOATutorialsWin11/CardValidationSystem/SOA/SCA-INF/
 SOATutorialsWin11/BillingManagementSystem/SOA/SCA-INF/
 
 SOATutorialsWin11/DesignTimeMDS/SOA/SCA-INF/
+
+SOATutorialsWin11/OrderProcessingSystem/SOA/SCA-INF/
