Added ebs-so .designer to the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ SOATutorialsWin11/BillingManagementSystem/SOA/SCA-INF/
 SOATutorialsWin11/DesignTimeMDS/SOA/SCA-INF/
 
 SOATutorialsWin11/EBS_SalesOrder_Import_ConcProg/SOA/SCA-INF/
+
+SOATutorialsWin11/EBS_SalesOrder_Import_ConcProg/SOA/BPEL/.designer/
